# approx_int

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci_cd.yml
src/: lib.rs
tests/: constructor.rs  eq.rs  from.rs  ops.rs  range.rs  special_values.rs
